RTL Layout issues in Sound Effect editor

--- a/theme/soundeffecteditor.less
+++ b/theme/soundeffecteditor.less
@@ -202,6 +202,12 @@
     }
 }
 
+.rtl .common-button.sound-effect-play-button {
+    .fas.fa-play, .fas.fa-stop {
+        margin: 0 0.25rem 0 0;
+    }
+}
+
 .common-button.sound-effect-play-button:focus-visible {
     outline: 3px solid var(--pxt-focus-border);
     outline-offset: 3px;
